package com.zx.adapter.objectadapter;

/**
 * @author ZhangXiong
 * @version v12.0.1
 * @date 2020-03-08
 * 设计模式
 * 适配器模式 对象适配器
 */
//被适配的类
public class Voltage220V {
    //输出220V的电压,不变
    public int output220V() {
        int src = 220;
        System.out.println("电压=" + src + "伏");
        return src;
    }
}
